@@ -41,6 +41,8 @@ Server Fixes:
   empty server, only to trigger it (which was already limited to a min of 15
   players) during a population boom.  Fixes #1017
 
+--Added logging of server populations at moment where we decide to start
+  spreading or stop spreading.  Part of #1018
 
 
 
